# trendfollowing

./: .gitignore  Cargo.toml  README.org  database.sql
algosystem/: Cargo.toml  README.md
algosystem/src/: binance.rs  common.rs  database.rs  server.rs  updater.rs
research/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  donchian.ipynb  forecasts.ipynb  forecasts.py  main.py  requirements.txt
research/datastore/: binance_scraper.py
src/: binance.rs  common.rs  main.rs  setup.rs
webui/: Cargo.toml  index.html
webui/src/: main.rs
