[package]
name = "datagather"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "*"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
chrono = "*"
dotenv = "*"
thiserror = "1.0"

[[bin]]
name = "main_app"
path = "src/main.rs"

[[bin]]
name = "data_updater"
path = "src/updater.rs"
